Added spring security to some extent...

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.jpa.open-in-view = false
 
 #Server Properties
 server.port=8000
+
+#Spring security
+
+logging.level.org.springframework.security=DEBUG
