Added logging interceptor

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,4 @@ server.port=8000
 
 #Spring security
 
-logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security=off
